--- a/FirstPage.html
+++ b/FirstPage.html
@@ -335,7 +335,9 @@
             today and take the first step {Creative} academic excellence.
 
         </div>
+        
         <div class="ol">
+            <!-- left part  -->
             <div class="olleft">
                 <div class="olleft-head" Online Learning <br>
                     Designed For Real Life
@@ -349,16 +351,18 @@
 
             </div>
             <div class="olleft-downbody">
-
+                <!-- left part of online learning part section 1-->
                 <div class="olleft1">
                     <div class="olright-head">
                         User-friendly platform to learn
                     </div>
+                    <!-- two section  -->
                     <div class="olright-body">
                         Packed with modern tech,<br> classroom learning which used to <br>
                         be done conventionally.
                     </div>
                 </div>
+                <!-- left part of online learning part section 2 -->
                 <div class="olleft2">
                     <div class="olright-head">
                         User-friendly platform to learn
