--- a/FirstPage.html
+++ b/FirstPage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first website</title>
     <link rel="stylesheet" href="first.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
 
     </style>
@@ -228,8 +229,16 @@
             </div>
         </div>
         <div class="footer">
+            <leftfooter class="lfooter">
+                <i style="font-size:24px" class="fa">&#xf16d;</i>
+            </leftfooter>
+            <rightfooter class="rfooter">
+                <p1>Template</p1>
+                <p2>Tools</p2>
+                <p3>Features</p3>
+                <p4>About Us</p4>
+            </rightfooter>
             <hr style="width: 90%;">
-
             All rights reserved @Dewo
         </div>
     </div>
