--- a/FirstPage.html
+++ b/FirstPage.html
@@ -228,16 +228,62 @@
 
             </div>
         </div>
+        <div class="afooter">
+            <div class="afleft">
+                <div class="afleft-head">
+                    COURSIS
+                </div>
+                <div class="afleft-body">
+                    Dewo Product Image and Video Generator is a<br>
+                    cutting-edge commerence product that uses<br>
+                    artificial intelligence(AI)
+                </div>
+
+            </div>
+            <div class="afright">
+                <div class="Address">
+                    <div class="afhead">
+                        Address
+                    </div>
+                    <div class="afbody">
+                        Technology Park 7-12 Gumpang<br>
+                        Recidance 57292 Surakarta Indonesia
+                    </div>
+                </div>
+                <div class="email">
+                    <div class="afhead">
+                        Email Address
+                    </div>
+                    <div class="afbody">
+                        Hallo@dewadewi.com<br>
+                        taskeye@gmail.com
+                    </div>
+                </div>
+
+                <div class="phone">
+                    <div class="afhead">
+                        Phone Number
+                    </div>
+                    <div class="afbody">
+                        (0271) 131 4564 232<br>
+                        082124342342
+                    </div>
+                </div>
+
+            </div>
+        </div>
         <div class="footer">
-            <leftfooter class="lfooter">
-                <i style="font-size:24px" class="fa">&#xf16d;</i>
-            </leftfooter>
-            <rightfooter class="rfooter">
-                <p1>Template</p1>
-                <p2>Tools</p2>
-                <p3>Features</p3>
-                <p4>About Us</p4>
-            </rightfooter>
+            <div class="footerhead">
+                <leftfooter class="lfooter">
+                    <i style="font-size:24px" class="fa">&#xf16d;</i>
+                </leftfooter>
+                <rightfooter class="rfooter">
+                    <p1>Template</p1>
+                    <p2>Tools</p2>
+                    <p3>Features</p3>
+                    <p4>About Us</p4>
+                </rightfooter>
+            </div>
             <hr style="width: 90%;">
             All rights reserved @Dewo
         </div>
