--- a/FirstPage.html
+++ b/FirstPage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first website</title>
     <link rel="stylesheet" href="first.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <style>
 
     </style>
@@ -25,12 +25,12 @@
         </div>
         <div class="Hright">
             <!-- <button>Sign In</button> -->
-            Sign In
+            <button class="button1">Sign In</button>
         </div>
         <div class="shead">
             <shead>Over 3 million ready-to-work Creatives!</shead>
         </div>
-        <div class="head">
+        <div class="starthead">
             Start Your Journey Toward<br>
             Academic Excellence
         </div>
@@ -39,13 +39,13 @@
             design for easy comprehension and practical application.
         </div>
         <div class="join">
-            Join Course
+            <button class="button1">Join Course</button>
         </div>
         <div class="pics">
-            <img src="./Images/Travel.jpeg" class="img1" />
-            <img src="./Images/Travel.jpeg" class="img2" />
-            <img src="./Images/Travel.jpeg" class="img3" />
-            <img src="./Images/Travel.jpeg" class="img4" />
+            <img src="./Images/a.jpg" class="img1" style="align-content: center;"/>
+            <img src="./Images/a.jpg" class="img2" />
+            <img src="./Images/a.jpg" class="img3" />
+            <img src="./Images/a.jpg" class="img4" />
         </div>
         <div class="banner">
             <div class="banner1">
@@ -195,7 +195,7 @@
                     and supportive community to acheive your educational and<br>
                     professional goals.
                 </div>
-                <button class="Join-course">
+                <button class="button2">
                     Join Course
                 </button>
 
@@ -228,8 +228,9 @@
 
             </div>
         </div>
-        <div class="afooter">
-            <div class="afleft">
+        <div class="af">
+            hello
+            <!-- <div class="afleft">
                 <div class="afleft-head">
                     COURSIS
                 </div>
@@ -246,7 +247,7 @@
                         Address
                     </div>
                     <div class="afbody">
-                        Technology Park 7-12 Gumpang<br>
+                        Technology Park 7-12 Gumpang<br><br>
                         Recidance 57292 Surakarta Indonesia
                     </div>
                 </div>
@@ -255,7 +256,7 @@
                         Email Address
                     </div>
                     <div class="afbody">
-                        Hallo@dewadewi.com<br>
+                        Hallo@dewadewi.com<br><br>
                         taskeye@gmail.com
                     </div>
                 </div>
@@ -265,12 +266,12 @@
                         Phone Number
                     </div>
                     <div class="afbody">
-                        (0271) 131 4564 232<br>
+                        (0271) 131 4564 232<br><br>
                         082124342342
                     </div>
                 </div>
 
-            </div>
+            </div> -->
         </div>
         <div class="footer">
             <div class="footerhead">
