--- a/FirstPage.html
+++ b/FirstPage.html
@@ -28,7 +28,7 @@
             <button class="button1">Sign In</button>
         </div>
         <div class="shead">
-            <shead>Over 3 million ready-to-work Creatives!</shead>
+            <shead>Over 3 million ready-to-work creatives!</shead>
         </div>
         <div class="starthead">
             Start Your Journey Toward<br>
